--- a/zwave_lamp_bot.cbp
+++ b/zwave_lamp_bot.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="example_echo">
-				<Option output="bin/example_echo" prefix_auto="1" extension_auto="0" />
+				<Option output="lamp_bot" prefix_auto="1" extension_auto="0" />
 				<Option object_output="obj/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
