--- a/zwave_lamp_bot.cbp
+++ b/zwave_lamp_bot.cbp
@@ -11,6 +11,9 @@
 				<Option object_output="obj/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-DNDEBUG" />
+				</Compiler>
 			</Target>
 		</Build>
 		<VirtualTargets>
